<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="deadline">Deadline</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_task">Add task</string>
    <string name="task_list">Task list</string>
    <string name="remove_task">Remove task</string>
    <string name="edit_task">Edit task</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="make_it">Make it</string>
    <string name="to_do">To Do</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="default_web_client_id">166358689946-66ehl20tg9vs8b5d0ulslui4e920dqj4.apps.googleusercontent.com</string>
    <string name="sign_out">Sign out</string>
    <string name="reactivate_task">Reactivate Task</string>
    <string name="visualiza_task">Visualiza Task</string>
    <string name="view_deleted_tasks">View deleted tasks</string>
    <string name="deleted_task_list">Deleted Task List</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
</resources>